# concat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  install
src/: clean.rs  cleanup.rs  cli.rs  clipboard.rs  config.rs  discover.rs  filter.rs  inputs.rs  main.rs  output.rs  output_name.rs  run.rs  sort.rs  text_detect.rs  tree.rs
tests/: concat.rs
