[package]
name = "concat-rs"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
glob = "0.3.2"
globset = "0.4.16"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.16.0"
[[bin]]
name = "concat"
path = "src/main.rs"
